add new exceptions, add new query parameters